[gd_scene load_steps=8 format=3 uid="uid://dj2kw1liof2kw"]

[ext_resource type="Script" path="res://weapons/gun_anim.gd" id="1_8vk4y"]
[ext_resource type="Texture2D" uid="uid://dp72ubhmooh5a" path="res://assets/sprites/weapons/epic_weapons/Sci-Fi Gun.png" id="2_877q2"]
[ext_resource type="PackedScene" uid="uid://dgsm31u8ob3qy" path="res://weapons/projectile/gun_bullet.tscn" id="2_kstfi"]

[sub_resource type="Animation" id="Animation_vm58c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_42ndc"]
resource_name = "attack"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_umrgj"]
resource_name = "cancel_attack"
length = 0.3
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_op8uj"]
_data = {
"RESET": SubResource("Animation_vm58c"),
"attack": SubResource("Animation_42ndc"),
"cancel_attack": SubResource("Animation_umrgj")
}

[node name="GunAnim" type="Node2D"]
script = ExtResource("1_8vk4y")
bullet = ExtResource("2_kstfi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_877q2")
offset = Vector2(12, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_op8uj")
}

[node name="Effects" type="Node2D" parent="."]

[node name="BarrelPosition" type="Marker2D" parent="Effects"]

[node name="ChargeParticles" type="GPUParticles2D" parent="Effects"]
emitting = false
